# plugin_ailabsaudit_tracke

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.claude/memory/: MEMORY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
collectors/cloudflare-worker/: README.md  package.json  wrangler.toml
collectors/cloudflare-worker/src/: cache.js  defaults.js  worker.js
collectors/cloudflare-worker/tests/: detection.test.js  hmac.test.js
collectors/log-agent/: .gitignore  Makefile  agent_test.go  ailabsaudit-agent.py  ailabsaudit-agent.service  buffer.go  cache.go  config.go  defaults.go  detector.go  go.mod  install.sh  main.go  parser.go  sender.go  tail.go  uninstall.sh
collectors/log-agent/tests/: test_agent.py
collectors/node/: README.md  package.json
collectors/node/src/: buffer.js  cache.js  (+3 more)
collectors/php/: LICENSE  README.md  composer.json
collectors/pixel/: README.md  package.json
collectors/python/: LICENSE  README.md  pyproject.toml
collectors/python/src/ailabsaudit_tracker/: __init__.py  buffer.py  cache.py  defaults.py  detector.py  tracker.py
collectors/python/tests/: test_buffer.py  test_detection.py  test_hmac.py
collectors/wordpress/: README.md  ailabsaudit-tracker.php  phpcs.xml.dist  readme.txt  uninstall.php
integration-tests/: README.md  run-all.sh  test-hmac-vectors.sh  validate-lists.js  validate-vectors.js  validate-vectors.py
spec/: api-endpoints.md  default-lists.json  hmac-signing.md  payload-format.md  test-vectors.json
(+25 files in other folders)
